--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "db:check": "drizzle-kit check"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.71",
+    "@assistant-ui/react": "^0.5.100",
+    "@assistant-ui/react-markdown": "^0.2.27",
+    "@assistant-ui/react-syntax-highlighter": "^0.0.18",
     "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.1.1",
@@ -28,6 +32,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@tanstack/react-query": "^5.59.19",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
@@ -39,6 +44,12 @@
     "postgres": "^3.4.5",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react-intersection-observer": "^9.13.1",
+    "react-resizable-panels": "^2.1.6",
+    "react-syntax-highlighter": "^15.6.1",
+    "rehype-katex": "^7.0.1",
+    "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
     "romans": "^2.0.16",
     "sonner": "^1.6.1",
     "tailwind-merge": "^2.5.4",
