--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "dependencies": {
     "@ai-sdk/openai": "^0.0.71",
     "@assistant-ui/react": "^0.5.100",
+    "@assistant-ui/react-ai-sdk": "^0.6.19",
     "@assistant-ui/react-markdown": "^0.2.27",
     "@assistant-ui/react-syntax-highlighter": "^0.0.18",
     "@paralleldrive/cuid2": "^2.2.2",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -33,8 +35,13 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@tanstack/react-query": "^5.59.19",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@uidotdev/usehooks": "^2.4.1",
+    "@upstash/ratelimit": "^2.0.4",
+    "@upstash/redis": "^1.34.3",
+    "ai": "^3.4.33",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.36.0",
     "immer": "^10.1.1",
