--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@assistant-ui/react-ai-sdk": "^0.6.19",
     "@assistant-ui/react-markdown": "^0.2.27",
     "@assistant-ui/react-syntax-highlighter": "^0.0.18",
+    "@clerk/nextjs": "^6.2.1",
     "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
@@ -46,11 +47,11 @@
     "drizzle-orm": "^0.36.0",
     "immer": "^10.1.1",
     "lucide-react": "^0.454.0",
-    "next": "15.0.2",
+    "next": "14.2.15",
     "next-themes": "^0.3.0",
     "postgres": "^3.4.5",
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react": "^18",
+    "react-dom": "^18",
     "react-intersection-observer": "^9.13.1",
     "react-resizable-panels": "^2.1.6",
     "react-syntax-highlighter": "^15.6.1",
