--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "@upstash/ratelimit": "^2.0.4",
     "@upstash/redis": "^1.34.3",
+    "@vercel/analytics": "^1.3.2",
     "ai": "^3.4.33",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
